# Carrinho_Compra_Rocket

./: .gitignore  Cargo.toml  README.md
src/: cart.rs  main.rs  products.rs  routes.rs
templates/: cart.tera  index.tera
