[package]
name = "shopping_cart_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }  # Ativar Tera como template engine
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
